@@ -5,6 +5,8 @@ Changelog
 0.2.2 (?)
 ---------------------
 
+* Bugfix: the Attr's injected instances were not rebound when the associated
+  scope changed
 * Simpler implementation of the ``bind`` function. Should be faster too!
 * The ``bind`` function can now be used on functions with varargs
 * The ``bind`` function can now be used as a decorator
